--- a/AirPort_PRO_NuGet_Logger/AirPort_PRO_NuGet_Logger/App.config
+++ b/AirPort_PRO_NuGet_Logger/AirPort_PRO_NuGet_Logger/App.config
@@ -44,4 +44,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="DataGridConnectionString" connectionString="Server=MAGICBOOK\SQLEXPRESS;Database=DataGridConnectionString;Trusted_Connection=True;"
+			 providerName="System.Data.SqlClient"/> 
+	</connectionStrings>
 </configuration>
